푸터 레이아웃 작업중

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -95,6 +95,7 @@
   --footer-page-title-border: #ccc;
   --footer-page-title-filled: #707070;
   --footer-border: #ccc;
+  --footer-desc: #909090;
   --footer-info-title: #707070;
   --footer-btn: #a0a0a0;
   --footer-icon: #707070;
@@ -203,7 +204,8 @@
     --footer-page-title-border: #707070;
     --footer-page-title-filled: #707070;
     --footer-border: #3a3a3a;
-    --footer-info-title: #ccc;
+    --footer-desc: #909090;
+    --footer-info-title: #707070;
     --footer-btn: #a0a0a0;
     --footer-icon: #ccc;
     --footer-btn-hover: #fff;
