--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -63,7 +63,7 @@
       letter-spacing: 0.1em;
       font: {
         size: $targetSize;
-        weight: var(--weight-medium);
+        weight: 400;
         family: "Noto Serif KR";
       }
       span {
