페이지 전환 수정 - 페이지 전환 시작 시, 레이아웃이 유지 되지 않는 현상 수정 - gnb 선택 시 현재 페이지 state가 바뀌도록 개선

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -20,7 +20,8 @@
   --screen-pytha: 2133px;
   --root-font-size: 10px;
   --header-height: 208px;
-  --footer-offset-y: 0px;
+  --footer-offset-y-profile: 0px;
+  --footer-offset-y-projects: 0px;
   // --scroll-pos: 0px;
   --header-sticky-pos: 0px;
   --footer-padding: 80px;
