작업 - 불필요 코드 정리 - /projects로 접근 시 오류 수정 - 페이지 전환 시간 조정 - 프로젝트 상세 링크 버튼 추가작업 - 프로젝트 상세 기술스텍 레이아웃 수정 - 프로필 기술스택 수정

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -136,6 +136,7 @@
   --details-desc: #5a5a5a;
   --details-stack-bg: #efefef;
   --details-stack-border: #b0b0b0;
+  --details-stack-text: #3a3a3a;
 
   &.dark-theme {
     // font weight
@@ -245,5 +246,6 @@
     --details-desc: #a0a0a0;
     --details-stack-bg: #dfdfdf;
     --details-stack-border: #fff;
+    --details-stack-text: #3a3a3a;
   }
 }
