--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -1,167 +1,65 @@
 @import "./css_variable";
 @import "./scss_global";
 
-.trans-enter,
-.trans-exit {
-  // position: absolute;
-  // transition: all 1s;
-  .scroll-container {
-    // overflow: hidden;
-    background: var(--page-bg);
-  }
-  &:after {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 9999;
-    transform: translate(-50%, -50%);
-    font-size: 100px;
-    font-weight: 700;
-  }
-}
-.trans-exit {
-  z-index: 800;
-  &:after {
-    content: "EXIT";
-    color: white;
-  }
-}
-.trans-enter {
-  opacity: 0;
-  z-index: 600;
-  &:after {
-    content: "ENTER";
-    color: red;
-  }
-}
-
-// .trans-exit-active {
-//   // transform: scale(0.9);
-//   // border-radius: rem(80px);
-//   .scroll-container {
-//     // filter: blur(rem(10px));
-//   }
-// }
-// .trans-exit-done {
-//   .scroll-container {
-//     // filter: blur(rem(10px));
-//   }
-// }
-// .trans-enter-active {
-//   // opacity: 0;
-// }
-
 .trans-cover-container {
-  // display: none;
   z-index: 99999;
   $targetSize: rem(160px);
-  &[type="slide"] {
-    .trans-target {
-      height: #{$targetSize * 1.2};
-      color: var(--trans-target);
-      // letter-spacing: -0.1em;
-      letter-spacing: 0.1em;
-      font: {
-        size: $targetSize;
-        weight: 400;
-        family: "Noto Serif KR";
-      }
-      span {
-        line-height: $targetSize;
-        top: 100%;
-        left: rem(80px);
-        transition: none;
-      }
+  .trans-target {
+    height: #{$targetSize * 1.4};
+    color: var(--trans-target);
+    // letter-spacing: -0.1em;
+    letter-spacing: 0.1em;
+    font: {
+      size: $targetSize;
+      weight: 400;
+      family: "Noto Serif KR";
     }
+    span {
+      line-height: $targetSize;
+      top: 100%;
+      left: rem(80px);
+      transition: none;
+    }
+  }
+  .trans-cover {
+    height: 0;
+    top: 0;
+    background: var(--trans-cover-bg);
+    transition: height 1s var(--trans-func-expo);
+  }
+  &.page-out {
     .trans-cover {
-      height: 0;
-      top: 0;
-      background: var(--trans-cover-bg);
-      transition: height 1s var(--trans-func-expo);
+      top: auto;
+      bottom: 0;
+      height: 100%;
+      transition-delay: 0;
     }
-    &.page-out {
-      .trans-cover {
-        top: auto;
-        bottom: 0;
-        height: 100%;
-        transition-delay: 0;
-      }
-      .trans-target {
-        span {
-          top: 0;
-          transition: top 0.4s;
-          transition-delay: 0.2s;
-        }
-      }
-    }
-    &.page-in {
-      .trans-cover {
-        transition-delay: 0.2s;
-      }
-      .trans-target {
-        span {
-          top: 100%;
-          transition: none;
-          animation: slidePageIn 0.4s;
-        }
-      }
-    }
-    @keyframes slidePageIn {
-      0% {
+    .trans-target {
+      span {
         top: 0;
-      }
-      100% {
-        top: -100%;
+        transition: top 0.8s var(--trans-func-expo);
+        transition-delay: 0.2s;
       }
     }
   }
-  &[type="bubble"] {
-    width: 1px;
-    height: 1px;
+  &.page-in {
     .trans-cover {
-      width: 0;
-      height: 0;
-      border-radius: 50%;
-      background: white;
-      transform: translate(-50%, -50%);
-      transition: all 1s;
-      transition-delay: 0.3s;
-      .trans-depth {
-        width: 0;
-        height: 0;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        transition: all 1s;
-      }
-      .trans-depth-1 {
-        background: orange;
-        transition-delay: 0.2s;
-      }
-      .trans-depth-2 {
-        background: yellowgreen;
-        transition-delay: 0s;
+      transition-delay: 0.2s;
+    }
+    .trans-target {
+      span {
+        top: 100%;
+        transition: none;
+        animation: slidePageIn 0.8s var(--trans-func-expo);
       }
     }
-    &.entering {
-      .trans-target {
-        opacity: 1;
-      }
-      .trans-cover {
-        width: calc(var(--screen-pytha) * 2);
-        height: calc(var(--screen-pytha) * 2);
-        transition-delay: 0s;
-        .trans-depth {
-          width: 100%;
-          height: 100%;
-        }
-        .trans-depth-1 {
-          transition-delay: 0.2s;
-        }
-        .trans-depth-2 {
-          transition-delay: 0.4s;
-        }
-      }
+  }
+  @keyframes slidePageIn {
+    0% {
+      top: 0;
+    }
+    100% {
+      top: -100%;
     }
   }
 }
