기간 컴포넌트 css 공통처리

--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -118,6 +118,20 @@ html:not(.mobile) {
   font-weight: 700;
 }
 
+.period {
+  display: flex;
+  align-items: center;
+  font: {
+    size: rem(20px);
+    weight: var(--weight-regular);
+  }
+  span {
+    width: rem(56px);
+    height: rem(1px);
+    margin: 0 rem(16px);
+  }
+}
+
 .page-section {
   transition: $trans_bgColor, $trans_opacity_expo;
   position: relative;
