--- a/portfolio2023_vite/src/scss/projects.scss
+++ b/portfolio2023_vite/src/scss/projects.scss
@@ -3,6 +3,10 @@
 
 .project-list {
   border-top: 1px solid var(--proj-border);
+  padding-bottom: rem(240px);
+  @media only screen and (min-width: 1024px) {
+    padding-bottom: 0;
+  }
 }
 .project-item {
   border-bottom: 1px solid var(--proj-border);
