--- a/portfolio2023_vite/src/scss/projects.scss
+++ b/portfolio2023_vite/src/scss/projects.scss
@@ -1,6 +1,10 @@
 @import "./css_variable";
 @import "./scss_global";
 
+.project-section {
+  width: 100%;
+}
+
 .project-list {
   border-top: 1px solid var(--proj-border);
   padding-bottom: rem(240px);
