--- a/portfolio2023_vite/src/scss/introSection.scss
+++ b/portfolio2023_vite/src/scss/introSection.scss
@@ -18,8 +18,8 @@
   h2 {
     margin-bottom: rem(160px);
     font-weight: 300;
-    font-size: rem(56px);
-    line-height: rem(73px);
+    font-size: rem(48px);
+    line-height: rem(64px);
     color: var(--intro-title);
     strong {
       font-weight: 500;
@@ -35,8 +35,8 @@
     }
   }
   p {
-    font-size: rem(40px);
-    line-height: rem(64px);
+    font-size: rem(32px);
+    line-height: rem(56px);
     font-weight: 400;
     color: var(--intro-desc);
     br {
@@ -46,11 +46,11 @@
       display: inline-block;
       transform: translateY(50%);
       opacity: 0;
-      transition: $trans_form_quad, $trans_opacity_quad;
+      transition: $trans_form, $trans_opacity;
       // transition-duration: 0.4s;
-      @for $p_idx from 0 to 6 {
-        &:nth-child(#{$p_idx + 2}) {
-          transition-delay: #{0.2s * $p_idx};
+      @for $p_idx from 1 to 6 {
+        &:nth-of-type(#{$p_idx + 1}) {
+          transition-delay: #{0.1s * $p_idx};
         }
       }
     }
@@ -88,7 +88,7 @@
 }
 
 .page-visual {
-  height: 50vh;
+  height: 50%;
   --title-size: #{rem(144px)};
 
   @media only screen and (min-width: 1024px) {
