--- a/portfolio2023_vite/src/scss/projectDetails.scss
+++ b/portfolio2023_vite/src/scss/projectDetails.scss
@@ -3,12 +3,6 @@
 
 @mixin gradBG {
   background-color: var(--details-bg);
-  // background: rgb(26, 26, 26);
-  // background: linear-gradient(
-  //   0deg,
-  //   rgba(26, 26, 26, 1) 0%,
-  //   rgba(37, 45, 56, 1) 100%
-  // );
 }
 
 .project-details-container {
@@ -46,7 +40,6 @@
 .details-intro {
   padding-top: var(--header-height);
   padding-bottom: rem(160px);
-  // position: relative;
 
   @mixin categoryFont {
     line-height: rem(24px);
@@ -153,11 +146,18 @@
   .details-title-mobile-container {
     z-index: 10;
     padding-top: rem(240px);
-    padding-bottom: rem(160px);
+    padding-bottom: rem(80px);
     .details-title {
       font: {
         size: rem(80px);
         weight: var(--weight-bold);
+      }
+    }
+    .details-subtitle {
+      line-height: rem(64px);
+      font: {
+        size: rem(40px);
+        weight: var(--weight-regular);
       }
     }
   }
@@ -165,7 +165,7 @@
   .details-btn-list {
     z-index: 10;
     li {
-      margin: 0 rem(40px) 0 0;
+      margin: rem(40px) rem(40px) 0 0;
     }
   }
 
@@ -248,6 +248,15 @@
       height: auto;
       margin-bottom: rem(120px);
     }
+    dd {
+      padding-left: rem(16px);
+      text-indent: rem(-16px);
+      word-break: keep-all;
+      &:before {
+        content: "\00B7";
+        margin-right: rem(8px);
+      }
+    }
   }
   @media only screen and (min-width: 1024px) {
     .details-summary {
@@ -263,30 +272,45 @@
     margin: 0 rem(-4px);
   }
   .tech-stacks-item {
-    // min-width: rem(48px);
-    height: rem(48px);
-    margin: 0 rem(4px) rem(8px);
-    padding: 0 rem(16px);
-    border-radius: rem(24px);
+    height: rem(64px);
+    margin: 0 rem(8px) rem(16px);
+    padding: 0 rem(32px);
+    border-radius: rem(32px);
     border: 1px solid var(--details-stack-border);
     background: var(--details-stack-bg);
-    // $scale_: calc(1.4 / remRatio(48px));
     img {
-      width: rem(24px);
-      height: rem(24px);
-      margin-right: rem(8px);
-      // transform: scale($scale_);
+      width: rem(32px);
+      height: rem(32px);
+      margin-right: rem(16px);
     }
     figcaption {
-      font-size: rem(16px);
-      font-weight: var(--weight-medium);
+      font-size: rem(32px);
+      font-weight: 400;
       line-height: 1em;
       letter-spacing: 0;
       color: var(--details-stack-text);
     }
   }
+  @media only screen and (min-width: 1024px) {
+    .tech-stacks-item {
+      height: rem(48px);
+      margin: 0 rem(4px) rem(8px);
+      padding: 0 rem(16px);
+      border-radius: rem(24px);
+      img {
+        width: rem(24px);
+        height: rem(24px);
+        margin-right: rem(8px);
+      }
+      figcaption {
+        font-size: rem(16px);
+        font-weight: var(--weight-medium);
+      }
+    }
+  }
+
   .details-info-item {
-    margin-bottom: rem(80px);
+    margin-bottom: rem(160px);
     display: inline-block;
     vertical-align: top;
   }
@@ -296,21 +320,31 @@
       height: rem(320px);
     }
   }
+
   dt {
     margin-bottom: rem(40px);
     color: var(--details-item-title);
-    line-height: rem(32px);
+    line-height: 1em;
     font: {
-      size: rem(24px);
+      size: rem(32px);
       weight: var(--weight-medium);
     }
   }
   dd {
     color: var(--details-desc);
-    line-height: rem(48px);
+    line-height: 2em;
     font: {
-      size: rem(24px);
+      size: rem(32px);
       weight: 500;
+    }
+  }
+  @media only screen and (min-width: 1024px) {
+    dt {
+      margin-bottom: rem(40px);
+      font-size: rem(24px);
+    }
+    dd {
+      font-size: rem(24px);
     }
   }
 
@@ -325,6 +359,9 @@
   @media only screen and (min-width: 1024px) {
     .period {
       display: flex;
+      span {
+        margin: 0 rem(16px);
+      }
     }
   }
 }
