레이아웃 조정 - 테마 메뉴 조정 - 페이지 비주얼 텍스트 border 조정 - 프로필 경력 시간 간격 조절

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -71,8 +71,8 @@
   --header-icon-active: #1a1a1a;
   --theme-icon-active: #ffc700;
   --theme-menu-bg: #efefef;
-  --theme-menu-icon: #bfbfbf;
-  --theme-menu-icon-selected: #5a5a5a;
+  --theme-menu-icon: #afafaf;
+  --theme-menu-icon-selected: #3a3a3a;
   --theme-text: #909090;
 
   // page visual
@@ -183,10 +183,10 @@
     --header-icon-hover: #ccc;
     --header-icon-active: #fff;
     --theme-icon-active: #ffd12d;
-    --theme-menu-bg: #5a5a5a;
-    --theme-menu-icon: #909090;
-    --theme-menu-icon-selected: #fff;
-    --theme-text: #909090;
+    --theme-menu-bg: #3a3a3a;
+    --theme-menu-icon: #707070;
+    --theme-menu-icon-selected: #ccc;
+    --theme-text: #ccc;
 
     // page visual
     --page-title-border: #a0a0a0;
