--- a/portfolio2023_vite/src/scss/profile.scss
+++ b/portfolio2023_vite/src/scss/profile.scss
@@ -1,6 +1,11 @@
 @import "./css_variable";
 @import "./scss_global";
 
+@mixin inView_all {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .profile-section {
   .section-contents {
     padding-top: 0;
@@ -32,6 +37,10 @@
       line-height: 1em;
       font-weight: 700;
       color: var(--section-header-title);
+      transition: $trans_color, $trans_form_expo, $trans_opacity_quad;
+      transform: translateY(100%);
+      opacity: 0;
+      transition-delay: 0.24s;
     }
     p {
       font-size: rem(32px);
@@ -39,6 +48,14 @@
       color: var(--section-header-desc);
       span {
         word-break: break-all;
+        transition: $trans_color, $trans_form_expo, $trans_opacity_quad;
+        transform: translateY(100%);
+        opacity: 0;
+        @for $p_idx from 0 to 6 {
+          &:nth-of-type(#{$p_idx + 1}) {
+            transition-delay: #{0.24s * $p_idx};
+          }
+        }
       }
       br {
         display: none;
@@ -57,6 +74,17 @@
         }
       }
     }
+    &.header-in-view {
+      h2 {
+        @include inView_all();
+      }
+      p {
+        span {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+    }
   }
 
   .career-list {
@@ -68,6 +96,16 @@
       color: var(--career-period);
       span {
         background: var(--career-period);
+        transition: $trans_bgColor, $trans_opacity;
+        opacity: 0;
+      }
+      time {
+        transition: $trans_color, $trans_form_quad, $trans_opacity_quad;
+        transform: translateY(100%);
+        opacity: 0;
+        &:last-child {
+          transition-delay: 0.2s;
+        }
       }
     }
     h3 {
@@ -79,6 +117,10 @@
           size: rem(40px);
           weight: var(--weight-medium);
         }
+        transform: translateY(100%);
+        opacity: 0;
+        transition: $trans_color, $trans_form_quad, $trans_opacity_quad;
+        transition-delay: 0.2s;
       }
       span {
         margin-top: rem(4px);
@@ -96,11 +138,18 @@
           margin: 0 rem(16px) 0 rem(24px);
           background: var(--career-company);
         }
+        opacity: 0;
+        transition: $trans_color, $trans_opacity;
+        transition-delay: 0.3s;
       }
     }
     p {
       color: var(--career-desc);
       line-height: 1.5em;
+      transform: translateY(100%);
+      opacity: 0;
+      transition: $trans_color, $trans_form_quad, $trans_opacity_quad;
+      transition-delay: 0.4s;
     }
     @media only screen and (min-width: 1024px) {
       .period {
@@ -132,6 +181,14 @@
         size: rem(56px);
         weight: var(--weight-medium);
       }
+      opacity: 0;
+      transform: translateY(100%);
+      transition: $trans_color, $trans_form_quad, $trans_opacity_quad;
+    }
+    dd {
+      opacity: 0;
+      transform: translateY(100%);
+      transition: $trans_color, $trans_form_quad, $trans_opacity_quad;
     }
     p,
     span {
@@ -173,10 +230,54 @@
         size: rem(40px);
         weight: 700;
       }
+      opacity: 0;
+      transform: translateY(100%);
+      transition: $trans_color, $trans_form_quad, $trans_opacity;
     }
     @media only screen and (min-width: 1024px) {
       padding-right: rem(240px);
       padding-bottom: 0;
+    }
+  }
+}
+
+.career-list {
+  .in-view {
+    .period {
+      span {
+        opacity: 1;
+      }
+      time {
+        @include inView_all();
+      }
+    }
+    h3 {
+      strong {
+        @include inView_all();
+      }
+      span {
+        opacity: 1;
+      }
+    }
+    p {
+      @include inView_all();
+    }
+  }
+}
+
+.experience-list {
+  dt.in-view {
+    @include inView_all();
+  }
+  dd.in-view {
+    @include inView_all();
+  }
+}
+
+.tool-list {
+  &.in-view {
+    li {
+      @include inView_all();
     }
   }
 }
