--- a/portfolio2023_vite/src/scss/introSection.scss
+++ b/portfolio2023_vite/src/scss/introSection.scss
@@ -10,6 +10,10 @@
   }
   @media only screen and (min-width: 1024px) {
     padding-bottom: rem(240px);
+    .section-contents {
+      padding-left: 0;
+      padding-right: 0;
+    }
   }
 
   h2 {
