프로젝트 상세 수정 - 컨테이너 모서리 반지름 수정 - 타이틀 인터렉션 오류 수정 - 미디어 트랜지션 추가

--- a/portfolio2023_vite/src/scss/_scss_global.scss
+++ b/portfolio2023_vite/src/scss/_scss_global.scss
@@ -49,3 +49,8 @@ $trans_form_back: transform var(--trans-time-move) 0s var(--trans-func-back);
     stroke-linecap: round;
   }
 }
+
+@mixin inView_all {
+  transform: translateY(0);
+  opacity: 1;
+}
