--- a/portfolio2023_next/src/styles/scss/reset.scss
+++ b/portfolio2023_next/src/styles/scss/reset.scss
@@ -23,7 +23,7 @@ blockquote, q {quotes:none;}
 blockquote:before, blockquote:after, q:before, q:after {content:''; content:none;}
 
 /* Media */
-img, svg {perspective: 1; max-width:100%; object-fit: contain;}
+img, svg {perspective: 1; max-width:100%; object-fit: contain; overflow:unset;}
 
 /* List */
 ul, ol, dl, li, dt, dd {list-style:none;}
