--- a/portfolio2023_next/src/styles/scss/globals.scss
+++ b/portfolio2023_next/src/styles/scss/globals.scss
@@ -1,8 +1,9 @@
-/* @tailwind base; */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @import "./reset";
 @import "./variables";
+@import "./common";
 @import "./remRoot";
 @import "./transitions";
