--- a/portfolio2023_next/src/styles/scss/remRoot.scss
+++ b/portfolio2023_next/src/styles/scss/remRoot.scss
@@ -1,9 +1,12 @@
 html {
   font-size: 10px;
   @media only screen and (min-width: 580px) {
-    font-size: 2vw;
+    font-size: 1.6vw;
   }
   @media only screen and (min-width: 1024px) {
+    font-size: 1.4vw;
+  }
+  @media only screen and (min-width: 1600px) {
     font-size: 1vw;
   }
 }
