페이지 전환 기반 작업

--- a/portfolio2023_next/src/styles/scss/variables.scss
+++ b/portfolio2023_next/src/styles/scss/variables.scss
@@ -1,4 +1,4 @@
 :root {
-  --serif-kr: "Noto Serif KR";
-  --sans-kr: "Noto Sans KR";
+  // --serif-kr: "Noto Serif KR";
+  // --sans-kr: "Noto Sans KR";
 }
