경험 섹션 모바일 스크롤 동작 개선

--- a/portfolio2023_next/src/styles/scss/common.scss
+++ b/portfolio2023_next/src/styles/scss/common.scss
@@ -11,3 +11,9 @@ body {
   overflow: hidden;
   z-index: 0;
 }
+
+.pin-spacer {
+  display: block !important;
+  position: static !important;
+  padding: 0 !important;
+}
