--- a/portfolio2023_next/src/styles/scss/variables.scss
+++ b/portfolio2023_next/src/styles/scss/variables.scss
@@ -1,4 +1,6 @@
 :root {
   --serif-kr: "Noto Serif KR";
+  --serif-dm: "DM Serif Display";
+  --serif-display: "Noto Serif Display";
   --sans-kr: "Noto Sans KR";
 }
