폰트 최적화

--- a/portfolio2023_next/src/styles/scss/variables.scss
+++ b/portfolio2023_next/src/styles/scss/variables.scss
@@ -1,5 +1,3 @@
-// :root {
-//   --serif-kr: "Noto Serif KR";
-//   --serif-dm: "DM Serif Display";
-//   --sans-kr: "Noto Sans KR";
-// }
+:root {
+  --serif-kr: "Noto Serif KR";
+}
