--- a/portfolio2023_next/src/styles/scss/common.scss
+++ b/portfolio2023_next/src/styles/scss/common.scss
@@ -6,8 +6,8 @@ body {
 }
 
 .page-container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   z-index: 0;
 }
